<resources>
    <string name="app_name">HCircle</string>
    <string name="welcome">WELCOME</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="signin">Sign In</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="or">Or</string>
    <string name="tabgen">TabGen</string>
    <string name="create_roles">Create Roles</string>
    <string name="create_tabs">Create Tabs</string>
    <string name="create_tabstrips">Create Tab Strips</string>
    <string name="create_users">Create Users</string>
    <string name="create_user_roles">Create Role</string>
    <string name="role_name">Role Name</string>
    <string name="OU">Organization Unit </string>
    <string name="role_type">Role Type</string>
    <string name="create">Create</string>
    <string name="logout">Logout</string>
    <string name="create_user">Create User</string>
    <string name="title_activity_landing">TabGen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tempLayoutHelp">Login as</string>
    <string name="title_activity_super_admin">SuperAdminActivity</string>
    <string name="title_activity_admin">Admin</string>
    <string name="OrgUnit">Organisation Unit</string>
    <string name="can_access_other_ou">Can access other OU: </string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="SelectOrgUnit">Select an organisation unit: </string>
    <string name="Organisation">Organisation</string>
    <string name="Username">User name</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="ListTitle">List Title</string>
    <string name="SubListItems">List Items</string>
    <string name="title_activity_normal_user">NormalUserActivity</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="confPasswd">Confirm Password</string>
    <string name="role">Role</string>
    <string name="CanAllowOffer">Can Allow Offer</string>
    <string name="CreateRole">Create Role</string>
    <string name="team_name">Team Name</string>
    <string name="title_activity_show_template">ShowTemplateActivity</string>
    <string name="title_activity_user_landing">UserLandingActivity</string>
    <string name="messageHint">Type your message here</string>
    <string name="commentHint">Type your comment here</string>
    <string name="sign_in_help">Need help signing in?</string>
</resources>
