<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context="com.nganthoi.salai.tabgen.CreateUserActivity"
        android:scrollIndicators="right"
        android:theme="@style/Base.ThemeOverlay.AppCompat">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/username"
                android:id="@+id/textViewUsername"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_edittext_heigth"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/username"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittext_style"
                android:layout_below="@+id/textViewUsername"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Password"
                    android:id="@+id/textViewPassword"
                    android:layout_below="@+id/username"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/custom_edittext_heigth"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/create_user_password"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittext_style"
                    android:layout_below="@+id/textViewPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/confPasswd"
                android:id="@+id/textViewConfirmPasswd"
                android:layout_below="@+id/create_user_password"
                android:layout_alignLeft="@+id/create_user_password"
                android:layout_alignStart="@+id/create_user_password"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_edittext_heigth"
                android:inputType="textPassword"
                android:id="@+id/create_confPasswd"
                android:layout_below="@+id/textViewConfirmPasswd"
                android:layout_alignLeft="@+id/textViewConfirmPasswd"
                android:layout_alignStart="@+id/textViewConfirmPasswd"
                android:background="@drawable/edittext_style"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Email"
                android:id="@+id/textViewEmail"
                android:layout_below="@+id/create_confPasswd"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_edittext_heigth"
                android:id="@+id/create_email"
                android:layout_below="@+id/textViewEmail"
                android:background="@drawable/edittext_style"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/gridLayout2"
                android:rowOrderPreserved="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/OrgUnit"
                    android:id="@+id/textView4"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:gravity="center|center_vertical" />

                <Spinner
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:id="@+id/spinnerOU"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:layout_row="0"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/role"
                    android:id="@+id/textView5"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:gravity="center_vertical" />

                <Spinner
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:id="@+id/spinnerRole"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:layout_row="1"
                    android:layout_column="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/CanAllowOffer"
                    android:id="@+id/textView7"
                    android:layout_row="2"
                    android:layout_column="0" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:orientation="horizontal"
                    android:id="@+id/radioGroupCanAllowOffer">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Yes"
                        android:id="@+id/CanAllowOfferYes"
                        android:checked="false" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/No"
                        android:id="@+id/CanAllowOfferNo"
                        android:checked="false" />
                </RadioGroup>
            </GridLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:id="@+id/create_user_button"
                android:layout_below="@+id/gridLayout2"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/response"
                android:layout_below="@+id/create_user_button"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true" />

    </RelativeLayout>

</ScrollView>
