<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#073a7c"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="#073a7c"
        android:layout_gravity="center_vertical">

        <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Username"
                    android:id="@+id/user_email"
                    android:layout_gravity="center_vertical"
                android:layout_marginTop="23dp"
                    android:textColor="#c1bebe"
            android:layout_below="@+id/team_name"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/username"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/username"
                    android:background="@drawable/edittext_style"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:layout_below="@+id/user_email"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical|center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/password"
                    android:id="@+id/textView2"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/username"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="#c1bebe" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:drawableLeft="@drawable/small_green_password_icon"
                    android:background="@drawable/edittext_style"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:layout_below="@+id/textView2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical|center_horizontal" />

                <!-- style="?android:attr/buttonStyleSmall" -->
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Show password"
                    android:id="@+id/show_password"
                    android:buttonTint="#ffffff"
                    android:checked="false"
                    android:textColor="#c1bebe"
                    android:layout_below="@+id/password"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="5dp"
                    android:theme="@style/Theme.AppCompat.Light" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/signIn"
                android:background="@drawable/button_background"
                android:textColor="#fcfafa"
                android:layout_below="@+id/show_password"
                android:layout_marginTop="20dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:textColor="#e3dedf"
            android:textColorHighlight="#fba336"
            android:textStyle="normal"
            android:id="@+id/forgotPassword"
            android:typeface="sans"
            android:clickable="true"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/signIn"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/team_name"
            android:background="@drawable/edittext_style"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="@string/team_name"
            android:layout_below="@+id/imageView"
            android:layout_alignRight="@+id/user_email"
            android:layout_alignEnd="@+id/user_email"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="160dp"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/ip"
            android:layout_above="@+id/team_name"
            android:layout_toRightOf="@+id/imageView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/edittext_style"
            android:hint="Set server IP here"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />


    </RelativeLayout>
</ScrollView>
